# ettcl

./: .gitignore  .gitmodules  Makefile  README.md  conda_env_cpu.yml  conda_env_gpu.yml  mp_test.py  pyproject.toml  requirements.txt
ettcl/core/: config.py  evaluate.py  evaluate_mlc.py  mlc_metrics.py  mlknn.py  pipelines.py  reranking.py  reranking_mlc.py  search.py  triple_sampling.py  vis.py
ettcl/data/: __init__.py  amazoncat_13k.py  imdb.py  reuters.py  trec.py  utils.py  xcr.py
ettcl/encoding/: __init__.py  base_encoder.py  colbert_encoder.py  encoder.py  st_encoder.py  word2vec_encoder.py
ettcl/indexing/: __init__.py  base_indexer.py  indexer.py
ettcl/logging/: __init__.py  logger.py  tqdm.py
ettcl/modeling/: __init__.py  configuration_colbert.py  modeling_bert.py  modeling_colbert.py  modeling_sentence_colbert.py  sentence_transformer.py  tokenization_colbert.py  tokenization_sentence_colbert.py
ettcl/searching/: __init__.py  base_searcher.py  colbert_searcher.py  searcher.py
notebooks/: Untitled.ipynb  cpu_optimizations.ipynb  dataset_statistics.ipynb  embeddings.ipynb  embeddings_colbert.ipynb  embeddings_hyped.ipynb  evaluate.ipynb  explaination_visualized.ipynb  faithfull_explainations.ipynb  sentence_embeddings.ipynb  subsample_datasets.ipynb
scripts/: build_index.py  build_index_colbert.py  cleanup.py  evaluate_colbert.py  evaluate_fasttext.py  evaluate_sbert.py  finetune.py  finetune_baseline.py  finetune_colbert.py  finetune_sbert.py  performance_benchmark.py  run.py  sampling.py  searching.py  test.py  train_fasttext.py
(+28 files in other folders)
