[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ettcl"
authors = [{name = "Henri Iser", email = "iserhenri@gmail.com"}]
description = "Improved Explainability of Transformer based Text Classification through Late-Interaction"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["ettcl*"]  # package names should match these glob patterns (["*"] by default)

[tool.black]
line-length = 100

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[tool.flake8]
select = ["A", "ANN", "BLK", "FS", "I", "C90", "E", "F", "W"]
ignore = ["ANN002", "ANN003", "ANN101", "ANN102", "ANN401", "E203", "E741", "W503"]
max-complexity = 16
max-line-length = 100
docstring-convention = "google"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=html --cov-report=term"
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
